--- a/founders.html
+++ b/founders.html
@@ -37,9 +37,9 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a style="font-size: large;" class="dropdown-item" href="#">The Venture</a>
                         <a style="font-size: large;" class="dropdown-item" href="founders.html">Founders</a>
-                        <a class="dropdown-item" href="history.html">History</a>
-                        <a class="dropdown-item" href="vision.html">Vision</a>
-                        <a class="dropdown-item" href="affilation.html">Affilation</a>
+                        <a style="font-size: large;" class="dropdown-item" href="history.html">History</a>
+                        <a style="font-size: large;" class="dropdown-item" href="vision.html">Vision</a>
+                        <a style="font-size: large;" class="dropdown-item" href="affilation.html">Affilation</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
@@ -50,9 +50,9 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a style="font-size: large;" class="dropdown-item" href="#">QuaranType</a>
                         <a style="font-size: large;" class="dropdown-item" href="#">Tale Me</a>
-                        <a class="dropdown-item" href="#">Digital Poetry</a>
-                        <a class="dropdown-item" href="#">Alfaaz-e-Khayaal</a>
-                        <a class="dropdown-item" href="#">Bazm-e-Lafz</a>
+                        <a style="font-size: large;" class="dropdown-item" href="#">Digital Poetry</a>
+                        <a style="font-size: large;" class="dropdown-item" href="#">Alfaaz-e-Khayaal</a>
+                        <a style="font-size: large;" class="dropdown-item" href="#">Bazm-e-Lafz</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
@@ -63,7 +63,7 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a style="font-size: large;" class="dropdown-item" href="#">Misfit</a>
                         <a style="font-size: large;" class="dropdown-item" href="#">Misfit</a>
-                        <a class="dropdown-item" href="#">Misfit</a>
+                        <a style="font-size: large;" class="dropdown-item" href="#">Misfit</a>
                     </div>
                 </li>
                 <li class="nav-item active">
@@ -78,49 +78,51 @@
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form>
             <div class="mx-2">
-                <a href="signUp.html"><button class="btn btn-danger" data-toggle="modal"
-                        data-target="#signUpModal">SignUp</button></a>
+                <a href="signUp.html"><button class="btn btn-primary" data-toggle="modal"
+                        data-target="#signUpModal">Signup</button></a>
                 <a href="login.html"><button class="btn btn-success" data-toggle="modal"
-                        data-target="#logInModal">LogIn</button></a>
+                        data-target="#logInModal">Login</button></a>
             </div>
         </div>
     </nav>
     <!-- navigation bar end -->
 
     <!-- top -->
-    <div class="jumbotron mx-2 my-2" style="background-color: #343A40; color: #ffffff;">
-        <div class="container">
-            <h1 class="display-3">Founders</h1>
-            <p>This is a template for testing purpose........ paragraph</p>
+    <div class="container my-4">
+        <div class="jumbotron mx-2 my-2" style="background-color: #343A40; color: #ffffff;">
+            <div class="container">
+                <h1 style="font-size: 35px;" class="display-3">Founders</h1>
+                <p>This is a template for testing purpose........ paragraph</p>
+            </div>
         </div>
     </div>
     <!-- top end -->
 
     <!-- rest -->
-    <div class="container">
+    <div class="container" style="margin-top: 50px;">
         <div class="row featurette">
             <div class="col-md-7" style="margin-top: auto; margin-bottom: auto; text-align: center;">
                 <h2 class="featurette-heading">Misfit heading <span class="text-muted">See for yourself.</span></h2>
                 <p class="lead">leading paragraph</p>
             </div>
             <div class="col-md-5">
-                <img style="width: 300px; height: 300px; margin: auto; display: block;" src="misfit_logo_png.png" alt="Misfit">
+                <img style="width: 200px; height: 200px; margin: auto; display: block;" src="misfit_logo_png.png" alt="Misfit">
             </div>
         </div>
-        <div class="row featurette">
+        <div class="row featurette my-4">
             <div class="col-md-7 order-md-2" style="margin-top: auto; margin-bottom: auto; text-align: center;">
                 <h2 class="featurette-heading">Misfit heading <span class="text-muted">See for yourself.</span></h2>
                 <p class="lead">leading paragraph</p>
             </div>
             <div class="col-md-5 order-md-1">
-                <img style="width: 300px; height: 300px; margin: auto; display: block;" src="misfit_logo_png.png" alt="Misfit">
+                <img style="width: 200px; height: 200px; margin: auto; display: block;" src="misfit_logo_png.png" alt="Misfit">
             </div>
         </div>
     </div>
     <!-- rest end -->
 
     <!-- rest data -->
-    <div class="container my-4">
+    <div class="container" style="margin-top: 50px;">
         <div class="row">
             <div class="col-lg-4">
                 <img style="width: 120px; height: 120px; margin: auto; display: block;" src="misfit_logo_png.png" alt="Misfit">
