--- a/contactus.html
+++ b/contactus.html
@@ -13,6 +13,32 @@
     <title>Contact Us</title>
 </head>
 
+<style>
+    .myrow::after{
+        display: table;
+        clear: both;
+        content: "";
+    }
+    .mycol1{
+        width: 50%;
+        float: left;
+    }
+    .mycol2{
+        width: 50%;
+        float: left;
+    }
+    @media only screen and (max-width: 600px){
+        .mycol1{
+            width: 100%;
+            text-align: center;
+        }
+        .mycol2{
+            width: 100%;
+        }
+        
+    }
+</style>
+
 <body>
 
     <!-- navigation bar -->
@@ -36,9 +62,9 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a style="font-size: large;" class="dropdown-item" href="#">The Venture</a>
                         <a style="font-size: large;" class="dropdown-item" href="founders.html">Founders</a>
-                        <a class="dropdown-item" href="history.html">History</a>
-                        <a class="dropdown-item" href="vision.html">Vision</a>
-                        <a class="dropdown-item" href="affilation.html">Affilation</a>
+                        <a style="font-size: large;" class="dropdown-item" href="history.html">History</a>
+                        <a style="font-size: large;" class="dropdown-item" href="vision.html">Vision</a>
+                        <a style="font-size: large;" class="dropdown-item" href="affilation.html">Affilation</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
@@ -49,9 +75,9 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a style="font-size: large;" class="dropdown-item" href="#">QuaranType</a>
                         <a style="font-size: large;" class="dropdown-item" href="#">Tale Me</a>
-                        <a class="dropdown-item" href="#">Digital Poetry</a>
-                        <a class="dropdown-item" href="#">Alfaaz-e-Khayaal</a>
-                        <a class="dropdown-item" href="#">Bazm-e-Lafz</a>
+                        <a style="font-size: large;" class="dropdown-item" href="#">Digital Poetry</a>
+                        <a style="font-size: large;" class="dropdown-item" href="#">Alfaaz-e-Khayaal</a>
+                        <a style="font-size: large;" class="dropdown-item" href="#">Bazm-e-Lafz</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
@@ -62,7 +88,7 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a style="font-size: large;" class="dropdown-item" href="#">Misfit</a>
                         <a style="font-size: large;" class="dropdown-item" href="#">Misfit</a>
-                        <a class="dropdown-item" href="#">Misfit</a>
+                        <a style="font-size: large;" class="dropdown-item" href="#">Misfit</a>
                     </div>
                 </li>
                 <li class="nav-item active">
@@ -77,45 +103,90 @@
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form>
             <div class="mx-2">
-                <a href="signUp.html"><button class="btn btn-danger" data-toggle="modal"
-                        data-target="#signUpModal">SignUp</button></a>
+                <a href="signUp.html"><button class="btn btn-primary" data-toggle="modal"
+                        data-target="#signUpModal">Signup</button></a>
                 <a href="login.html"><button class="btn btn-success" data-toggle="modal"
-                        data-target="#logInModal">LogIn</button></a>
+                        data-target="#logInModal">Login</button></a>
             </div>
         </div>
     </nav>
     <!-- navigation bar end -->
 
 
-    <!-- contact form -->
-    <div class="container my-4">
-        <div class="jumbotron p-4 p-md-5 text-white rounded bg-dark">
-            <h2>Contact Us:</h2>
-            <div class="container ">
-                <form>
-                    <div class="form-group">
-                        <label for="inputName">Last Name</label>
-                        <input placeholder="full name" type="text" class="form-control" id="inputName">
-                    </div>
-                    <div class="form-group">
-                        <label for="inputEmail">Email Address</label>
-                        <input type="email" placeholder="email@example.com" class="form-control" id="inputEmail">
-                    </div>
-                    <div class="form-group">
-                        <label for="inputPhone">Phone Number</label>
-                        <input placeholder="contact number" type="tel" class="form-control" id="inputPhone">
-                    </div>
-                    <div class="form-group">
-                        <label for="exampleFormControlTextarea1">How can we help you?</label>
-                        <textarea placeholder="your response..." class="form-control" id="exampleFormControlTextarea1"
-                            rows="3"></textarea>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Contact</button>
-                </form>
+    <div class="container" style="margin-top: 20px;">
+        <div class="jtron jumbotron p-4 p-md-5 text-white rounded bg-dark">
+            <h2>Contact Us</h2>
+            <div class="myrow">
+                <div class="my-4 mycol1">
+                    our details
+                    <h2 class="mycol">The Misfit Prose</h2>
+                    <p>address and other stuffs</p>
+                </div>
+                <div class="my-4 mycol2">
+                    <form>
+                        <div class="form-group">
+                            <label for="inputName">Full Name</label>
+                            <input placeholder="full name" type="text" class="form-control" id="inputName">
+                        </div>
+                        <div class="form-group">
+                            <label for="inputEmail">Email Address</label>
+                            <input type="email" placeholder="email@example.com" class="form-control" id="inputEmail">
+                        </div>
+                        <div class="form-group">
+                            <label for="inputPhone">Phone Number</label>
+                            <input placeholder="contact number" type="tel" class="form-control" id="inputPhone">
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleFormControlTextarea1">How can we help you?</label>
+                            <textarea placeholder="your response..." class="form-control" id="exampleFormControlTextarea1"
+                                rows="3"></textarea>
+                        </div>
+                        <button style="width: 50%; margin-top: 30px; margin-bottom: 0px; margin-right: auto; margin-left: auto; display: block;" type="submit" class="btn btn-primary">contact</button>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
-    <!-- contact form end -->
+
+
+    <!-- contact form 
+    <div class="container my-4">
+        <div class="jumbotron p-4 p-md-5 text-white rounded bg-dark">
+            <h2>Contact Us</h2>
+            <div class="row">
+                <div class="col my-4 mycol1">
+                    our details
+                    <h2 class="mycol">The Misfit Prose</h2>
+                    <p>address and other stuffs</p>
+                </div>
+                <div class="col mycol2">
+                    <div class="container">
+                        <form>
+                            <div class="form-group">
+                                <label for="inputName">Full Name</label>
+                                <input placeholder="full name" type="text" class="form-control" id="inputName">
+                            </div>
+                            <div class="form-group">
+                                <label for="inputEmail">Email Address</label>
+                                <input type="email" placeholder="email@example.com" class="form-control" id="inputEmail">
+                            </div>
+                            <div class="form-group">
+                                <label for="inputPhone">Phone Number</label>
+                                <input placeholder="contact number" type="tel" class="form-control" id="inputPhone">
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleFormControlTextarea1">How can we help you?</label>
+                                <textarea placeholder="your response..." class="form-control" id="exampleFormControlTextarea1"
+                                    rows="3"></textarea>
+                            </div>
+                            <button style="width: 50%; margin-right: auto; margin-left: auto; display: block;" type="submit" class="btn btn-primary">contact</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+     contact form end -->
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
