--- a/vision.html
+++ b/vision.html
@@ -37,9 +37,9 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a style="font-size: large;" class="dropdown-item" href="#">The Venture</a>
                         <a style="font-size: large;" class="dropdown-item" href="founders.html">Founders</a>
-                        <a class="dropdown-item" href="history.html">History</a>
-                        <a class="dropdown-item" href="vision.html">Vision</a>
-                        <a class="dropdown-item" href="affilation.html">Affilation</a>
+                        <a style="font-size: large;" class="dropdown-item" href="history.html">History</a>
+                        <a style="font-size: large;" class="dropdown-item" href="vision.html">Vision</a>
+                        <a style="font-size: large;" class="dropdown-item" href="affilation.html">Affilation</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
@@ -50,9 +50,9 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a style="font-size: large;" class="dropdown-item" href="#">QuaranType</a>
                         <a style="font-size: large;" class="dropdown-item" href="#">Tale Me</a>
-                        <a class="dropdown-item" href="#">Digital Poetry</a>
-                        <a class="dropdown-item" href="#">Alfaaz-e-Khayaal</a>
-                        <a class="dropdown-item" href="#">Bazm-e-Lafz</a>
+                        <a style="font-size: large;" class="dropdown-item" href="#">Digital Poetry</a>
+                        <a style="font-size: large;" class="dropdown-item" href="#">Alfaaz-e-Khayaal</a>
+                        <a style="font-size: large;" class="dropdown-item" href="#">Bazm-e-Lafz</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
@@ -63,7 +63,7 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a style="font-size: large;" class="dropdown-item" href="#">Misfit</a>
                         <a style="font-size: large;" class="dropdown-item" href="#">Misfit</a>
-                        <a class="dropdown-item" href="#">Misfit</a>
+                        <a style="font-size: large;" class="dropdown-item" href="#">Misfit</a>
                     </div>
                 </li>
                 <li class="nav-item active">
@@ -78,41 +78,31 @@
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form>
             <div class="mx-2">
-                <a href="signUp.html"><button class="btn btn-danger" data-toggle="modal"
-                        data-target="#signUpModal">SignUp</button></a>
+                <a href="signUp.html"><button class="btn btn-primary" data-toggle="modal"
+                        data-target="#signUpModal">Signup</button></a>
                 <a href="login.html"><button class="btn btn-success" data-toggle="modal"
-                        data-target="#logInModal">LogIn</button></a>
+                        data-target="#logInModal">Login</button></a>
             </div>
         </div>
     </nav>
     <!-- navigation bar end -->
 
     <!-- top -->
-    <div class="jumbotron mx-2 my-2" style="background-color: #343A40; color: #ffffff;">
-        <div class="container">
-            <h1 class="display-3">Vision</h1>
-            <p>This is a template for testing purpose........ paragraph</p>
+    <div class="container my-4">
+        <div class="jumbotron mx-2 my-2" style="background-color: #343A40; color: #ffffff;">
+            <div class="container">
+                <h1 class="display-3" style="font-size: 35px;">Vision</h1>
+                <p>This is a template for testing purpose........ paragraph</p>
+            </div>
         </div>
     </div>
     <!-- top end -->
 
     <!-- data -->
-    <div class="container">
-        <div class="jumbotron my-2 mx-2">
-            <h1>Misfit Prose</h1>
-            <p class="lead">This example is an example paragraph page.</p>
-            <a class="btn btn-lg btn-primary" href="#" role="button">Enter »</a>
-        </div>
-        <div class="jumbotron my-2 mx-2">
-            <h1>Misfit Prose</h1>
-            <p class="lead">This example is an example paragraph page.</p>
-            <a class="btn btn-lg btn-primary" href="#" role="button">Enter »</a>
-        </div>
-        <div class="jumbotron my-2 mx-2">
-            <h1>Misfit Prose</h1>
-            <p class="lead">This example is an example paragraph page.</p>
-            <a class="btn btn-lg btn-primary" href="#" role="button">Enter »</a>
-        </div>
+    <div class="jumbotron my-2 mx-2">
+        <h1>Misfit Prose</h1>
+        <p class="lead">This example is an example paragraph page.</p>
+        <a class="btn btn-lg btn-primary" href="#" role="button">Enter »</a>
     </div>
     <!-- data end -->
 
